MD Settings: drop subpage arrow from default browser section

Instead, show a "MAKE DEFAULT" button as a call to action so it's clearer
how a user can change their default browser.

R=dschuyler@chromium.org
BUG=651720
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2382243003
Cr-Commit-Position: refs/heads/master@{#422896}

Former-commit-id: c59443f0412c8dd63a59f0e2ce556bfd7151e1d0